packages/components/src/components/post-back-to-top/post-back-to-top.scss
@use '@swisspost/design-system-styles/tokens/components';
@use '@swisspost/design-system-styles/functions/tokens';
@use '@swisspost/design-system-styles/mixins/button' as button-mx;
@use '@swisspost/design-system-styles/mixins/icons' as icons;
@use '@swisspost/design-system-styles/mixins/utilities';
@use '@swisspost/design-system-styles/variables/elevation';

tokens.$default-map: components.$post-floating-button;

:host {
  opacity: 0;
  --post-floating-button-position-top: #{tokens.get('floating-button-position-top')};
  --post-back-to-top-position-top: calc(
    var(--post-header-height) + var(--post-floating-button-position-top)
  );
  --post-back-to-top-elevation: #{tokens.get('floating-button-elevation')};
  position: fixed;
  inset-block-start: var(--post-back-to-top-position-top);
  inset-inline-end: tokens.get('floating-button-position-right');

  .back-to-top {
    @include button-mx.reset-button;
    @include utilities.focus-style;
    box-shadow: var(--post-back-to-top-elevation);
    cursor: pointer;
    border-radius: tokens.get('floating-button-border-radius-round');
    width: tokens.get('floating-button-size-outer');
    height: tokens.get('floating-button-size-outer');
    border: tokens.get('floating-button-border-width') solid
      tokens.get('floating-button-enabled-border');
    color: tokens.get('floating-button-enabled-fg');
    background-color: tokens.get('floating-button-enabled-bg');
    display: flex;
    align-items: center;
    justify-content: center;

    &:hover {
      border-color: tokens.get('floating-button-hover-border');
      color: tokens.get('floating-button-hover-fg');
      background-color: tokens.get('floating-button-hover-bg');

      @include utilities.high-contrast-mode() {
        color: HighlightText !important;
      }
    }

    post-icon {
      height: tokens.get('floating-button-size-icon');
      width: tokens.get('floating-button-size-icon');
    }
  }

  .visually-hidden {
    @include utilities.visuallyhidden();
  }
}

